updated glitter image file name and updated reference in webpage

--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-    background-image: url('images/glitter%20rosegold%20frame%20overlay1.png');
+    background-image: url('images/glitter01.png');
     min-height: 100%;
 }
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-    background-image: url('images/glitter%20rosegold%20frame%20overlay1.png');
+    background-image: url('images/glitter01.png');
     min-height: 400px;
 }
 
 /* Third image (Contact) */
 .bgimg-3 {
-    background-image: url('images/glitter%20rosegold%20frame%20overlay1.png');
+    background-image: url('images/glitter01.png');
     min-height: 400px;
 }
 
